# messagingframework

./: .gitignore  .qmake.conf  CHANGES  CMakeLists.txt  README  common.pri  dependencies.yaml  messagingframework.pro  qmf.pro  symbianoptions.pri  sync.profile  tmp.txt
benchmarks/tst_messageserver/: CMakeLists.txt  benchmarkcontext.cpp  benchmarkcontext.h  qscopedconnection.cpp  qscopedconnection.h  testfsusage.cpp  testfsusage.h  testmalloc.cpp  testmalloc.h  tst_messageserver.cpp  tst_messageserver.pro
examples/qtmail/: .gitignore  CMakeLists.txt  accountsettings.cpp  accountsettings.h  attachmentlistwidget.cpp  attachmentlistwidget.h  attachmentoptions.cpp  attachmentoptions.h  browserwidget.cpp  browserwidget.h  detailspage.cpp  detailspage_p.h  editaccount.cpp  editaccount.h  emailclient.cpp  emailclient.h  emailcomposer.cpp  emailcomposer.h  genericviewer.cpp  genericviewer.h  main.cpp  messagelistview.cpp  messagelistview.h  qmailcomposer.cpp  qmailcomposer.h  qmailviewer.cpp  qmailviewer.h  qtmail-en_GB.ts  qtmail-en_SU.ts  qtmail-en_US.ts  qtmail-es.ts  qtmail-fr.ts  qtmail-ko.ts  qtmail-zh_CN.ts  qtmail-zh_TW.ts  qtmail.pro  qtmail.qrc  readmail.cpp  readmail.h  searchview.cpp  (+11 more)
examples/qtmail/app/: accountsettings.cpp  accountsettings.h  app.pro  attachmentoptions.cpp  detailspage_p.h  editaccount.cpp  editaccount.h  emailclient.cpp  emailclient.h  genericviewer.h  main.cpp  messagelistview.cpp  messagelistview.h  mmseditaccount.cpp  observer.cpp  observer.h  qmailcomposer.cpp  qmailviewer.cpp  qtmail-ar.ts  qtmail-de.ts  qtmail-it.ts  qtmail-ja.ts  qtmail-pt_BR.ts  qtmail.qrc  readmail.cpp  readmail.h  searchview.cpp  searchview.h  selectcomposerwidget.cpp  selectcomposerwidget.h  statusbar.cpp  statusbar.h  statusmonitor.cpp  statusmonitor.h  statusmonitorwidget.cpp  statusmonitorwidget.h  writemail.cpp  writemail.h
examples/qtmail/app/settings/: accountsettings.cpp
examples/qtmail/libs/qmfutil/: emailfoldermodel.cpp  emailfoldermodel.h  emailfolderview.cpp  emailfolderview.h  folderdelegate.cpp  folderdelegate.h  foldermodel.cpp  foldermodel.h  folderview.cpp  folderview.h  libqmfutil-zh_TW.ts  qmailcomposer.cpp  qmailcomposer.h  qmailmessagedelegate.h  qmailviewer.cpp  qmailviewer.h  qmfutil.pro  qtmailnamespace.cpp  qtmailnamespace.h  selectfolder.cpp  selectfolder.h
examples/qtmail/plugins/composers/email/: attachmentlistwidget.cpp  attachmentlistwidget.h  detailspage.cpp  detailspage_p.h  email.pro  email.qrc  emailcomposer.cpp  emailcomposer.h  libemailcomposer-ar.ts  libemailcomposer-zh_CN.ts
examples/qtmail/plugins/viewers/generic/: attachmentoptions.cpp  attachmentoptions.h  browserwidget.cpp  browserwidget.h  generic.pro  genericviewer.cpp  genericviewer.h  libgenericviewer-de.ts  (+1 more)
examples/serverobserver/: CMakeLists.txt  main.cpp  serverobserver.cpp  serverobserver.h  serverobserver.pro
tests/: CMakeLists.txt  tests.pri  tests.pro  tests.xml
tests/qt5/: tests.xml
tests/tst_crypto/: CMakeLists.txt  tst_crypto.cpp  tst_crypto.pro
tests/tst_crypto/testdata/: FECA2AF719090DD594C02C27F9CB3F8ED7EDAB31.key  QMFtest.pem  aftersig  aftersmime  badsigdata  caliste.asc  key.asc  nokey  nosig  secret.asc  smimesig  validsig
tests/tst_imap/: CMakeLists.txt  tst_imap.cpp  tst_imap.pro
tests/tst_locks/: CMakeLists.txt  tst_locks.cpp  tst_locks.pro
tests/tst_longstream/: CMakeLists.txt  tst_longstream.cpp  tst_longstream.pro
tests/tst_longstring/: CMakeLists.txt  tst_longstring.cpp  tst_longstring.pro
tests/tst_pop/: CMakeLists.txt  tst_pop.cpp  tst_pop.pro
tests/tst_python_email/: CMakeLists.txt  tst_python_email.cpp  tst_python_email.pro
tests/tst_python_email/testdata/: msg_01a.txt
tests/tst_qcop/: tst_qcop.cpp  tst_qcop.pro
tests/tst_qlogsystem/: CMakeLists.txt  tst_qlogsystem.cpp  tst_qlogsystem.pro
tests/tst_qmail_listmodels/: CMakeLists.txt  tst_qmail_listmodels.cpp  tst_qmail_listmodels.pro
tests/tst_qmail_sortkeys/: CMakeLists.txt  tst_qmail_sortkeys.cpp  tst_qmail_sortkeys.pro
tests/tst_qmailaccountconfiguration/: CMakeLists.txt  tst_qmailaccountconfiguration.cpp  tst_qmailaccountconfiguration.pro
tests/tst_qmailaccountkey/: CMakeLists.txt  tst_qmailaccountkey.cpp  tst_qmailaccountkey.pro
tests/tst_qmailaddress/: CMakeLists.txt  tst_qmailaddress.cpp  tst_qmailaddress.pro
tests/tst_qmailcodec/: CMakeLists.txt  tst_qmailcodec.cpp  tst_qmailcodec.pro
tests/tst_qmaildisconnected/: CMakeLists.txt  tst_qmaildisconnected.cpp  tst_qmaildisconnected.pro
tests/tst_qmaillog/: CMakeLists.txt  tst_qmaillog.cpp  tst_qmaillog.pro
tests/tst_qmailmessage/: CMakeLists.txt  tst_qmailmessage.cpp  tst_qmailmessage.pro
tests/tst_qmailmessage/symbiantestdata/: testbody.txt
tests/tst_qmailmessagebody/: CMakeLists.txt  tst_qmailmessagebody.cpp  tst_qmailmessagebody.pro
tests/tst_qmailmessageheader/: CMakeLists.txt  tst_qmailmessageheader.cpp  tst_qmailmessageheader.pro
tests/tst_qmailmessagepart/: CMakeLists.txt  tst_qmailmessagepart.cpp  tst_qmailmessagepart.pro
tests/tst_qmailmessageset/: CMakeLists.txt  tst_qmailmessageset.cpp  tst_qmailmessageset.pro
tests/tst_qmailnamespace/: CMakeLists.txt  tst_qmailnamespace.cpp  tst_qmailnamespace.pro
tests/tst_qmailserviceaction/: CMakeLists.txt  tst_qmailserviceaction.cpp  tst_qmailserviceaction.pro
tests/tst_qmailstorageaction/: CMakeLists.txt  tst_qmailstorageaction.cpp  tst_qmailstorageaction.pro
tests/tst_qmailstore/: CMakeLists.txt  tst_qmailstore.cpp  tst_qmailstore.pro
tests/tst_qmailstorekeys/: CMakeLists.txt  tst_qmailstorekeys.cpp  tst_qmailstorekeys.pro
tests/tst_qmailthread/: CMakeLists.txt  tst_qmailthread.cpp  tst_qmailthread.pro
tests/tst_qmflist/: CMakeLists.txt  tst_qmflist.cpp  tst_qmflist.pro
tests/tst_qmfstoragemanager/: tst_qmfstoragemanager.cpp  tst_qmfstoragemanager.pro
tests/tst_qprivateimplementation/: CMakeLists.txt  tst_qprivateimplementation.cpp  tst_qprivateimplementation.pro
tests/tst_smtp/: CMakeLists.txt  tst_smtp.cpp  tst_smtp.pro
tests/tst_storagemanager/: CMakeLists.txt  tst_storagemanager.cpp  tst_storagemanager.pro
(+1161 files in other folders)
